# voice-spoofing-detection

./: .gitignore  README.md  main.py  pyproject.toml
docs/: Technical Blueprint Report.docx  VoiceDetectionProjectPaper.tex
src/: app.py  baseline_cnn_model.py  data_loader.py  dataset.py  evaluate.py  preprocess.py  test.py  train.py
